--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
 		<a href="#" class="jqm-navmenu-link ui-nodisc-icon ui-alt-icon ui-btn-left ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all" data-role="button" role="button"> Menu</a>
 		
 	</div><!-- /header -->
-
+<script type="text/javascript" src="cordova.js"></script>    
 	
 	<div role="main" class="ui-content jqm-content">
 		<h1>Hello mindo</h1>
